fixed scrolling, omnibox issues. added more forms.

--- a/public/pages/flow-node-editor.html
+++ b/public/pages/flow-node-editor.html
@@ -1,4 +1,4 @@
-<md-whiteframe layout="vertical" class="md-whiteframe-z1 flow-node-editor ng-hide" ng-show="flowNodeType">  
+<md-card layout="vertical" class="flow-node-editor ng-hide" ng-show="flowNodeType">  
   <md-toolbar>
       <div class="md-toolbar-tools">
         <h2><span>Edit Node</span></h2>    
@@ -13,4 +13,4 @@
         <md-switch ng-model="flowNode.debug">Debug</md-switch>        
       </form>
     </md-content>
-</md-whiteframe>
+</md-card>
