--- a/public/pages/node_forms/output_form.html
+++ b/public/pages/node_forms/output_form.html
@@ -1,9 +1,2 @@
-<div class="form-group">
-    <label for="name">Name</label>
-    <input  id="name" class="form-control" type="text" ng-model="flowNode.name">
-</div>
-
-<div class="form-group">
-    <label for="name">Topic</label>
-    <input  id="name" class="form-control" type="text" ng-model="flowNode.topic">
-</div>
+<md-text-float label="Name" ng-model="flowNode.name"> </md-text-float>
+<md-text-float label="Topic" ng-model="flowNode.topic"> </md-text-float>
