--- a/public/pages/node_forms/device_form.html
+++ b/public/pages/node_forms/device_form.html
@@ -1,27 +1,8 @@
-<div class="form-group">
-  <label for="name">Name</label>
-  <input  id="name" class="form-control" type="text" ng-model="flowNode.name">
-</div>
-<div class="form-group">
-  <div class="row">
-    <div class="col-xs-12 col-md-6">
-      <label class="form-label" for="use-static-message">Forward Payload</label>
-    </div>
-
-    <div class="col-xs-12 col-md-6 text-right">
-      <div class="btn-group">
-        <input type="button" class="btn btn-default" ng-model="flowNode.useStaticMessage" btn-radio="true" value="No">
-        <input type="button" class="btn btn-default" ng-model="flowNode.useStaticMessage" btn-radio="false" value="Yes">
-      </div>
-    </div>
-  </div>
-</div>
-<div class="form-group">
-  <label for="name">Filter By Topic</label>
-  <input  id="name" class="form-control" type="text" ng-model="flowNode.filterTopic">
-</div>
+<md-text-float label="Name" ng-model="flowNode.name"> </md-text-float>
+<md-switch ng-true-value="false" ng-false-value="true" ng-model="flowNode.useStaticMessage">Forward Payload</md-switch>
+<md-text-float label="Filter by Topic" ng-model="flowNode.filterTopic"> </md-text-float>
 
 
-<div class="form-group" ng-if="flowNode.useStaticMessage">
+<div ng-if="flowNode.useStaticMessage">
   <device-message-form uuid="flowNode.uuid" token="flowNode.token" model="flowNode.staticMessage"></device-message-form>
 </div>
