Update range form to call key value

--- a/public/pages/node_forms/range_form.html
+++ b/public/pages/node_forms/range_form.html
@@ -4,8 +4,8 @@
 </div>
 
 <div class="form-group">
-  <label for="key">Key</label>
-  <input  id="key" class="form-control" type="text" ng-model="flowNode.key" required>
+  <label for="value">Value (Referrence incomming messages with <span ng-non-bindable>{{payload.value}}</span>)</label>
+  <input  id="value" class="form-control" type="text" ng-model="flowNode.value" required>
 </div>
 
 <div class="form-group">
