Changed ng-if to ng-show for device form directive and device message form templates. There were scoping issues caused by using ng-if. This fixed the issue we where having with message options not showing properly.

--- a/public/pages/node_forms/device_form.html
+++ b/public/pages/node_forms/device_form.html
@@ -3,6 +3,6 @@
 <md-text-float label="Filter by Topic" ng-model="flowNode.filterTopic"> </md-text-float>
 
 
-<div ng-if="flowNode.useStaticMessage">
+<div ng-show="flowNode.useStaticMessage" ng-hide="!flowNode.useStaticMessage">
   <device-message-form uuid="flowNode.uuid" token="flowNode.token" model="flowNode.staticMessage"></device-message-form>
 </div>
