--- a/public/pages/device-message-form.html
+++ b/public/pages/device-message-form.html
@@ -1,3 +1,3 @@
-<div ng-if="device">
+<div ng-show="device" ng-hide="!device">
   <schema-editor schema="device.messageSchema" model="model" allow-json-edit="true" additional-properties="true"></schema-editor>
 </div>
