use new hackster.io page

--- a/public/pages/community.html
+++ b/public/pages/community.html
@@ -28,8 +28,8 @@
             </div>
             <div class="box-content">
                 <div class="well">Connect, share and discuss Octoblu with the community. <br/><br/></div>
-                <a href="http://forum.octoblu.com/" title="Octoblu Forum" class="btn btn-primary"><i
-                        class='icon-group'></i> Go to Forum</a>
+                <a href="http://hackster.io/octoblu" title="hackster.io/octoblu" class="btn btn-primary"><i
+                        class='icon-group'></i> Go to hackster.io/octoblu</a>
             </div>
         </div>
     </div>
