--- a/public/pages/node_forms/device_form.html
+++ b/public/pages/node_forms/device_form.html
@@ -1,5 +1,5 @@
 <md-text-float label="Name" ng-model="flowNode.name"> </md-text-float>
-<md-switch ng-true-value="false" ng-false-value="true" ng-model="flowNode.useStaticMessage">Forward Payload</md-switch>
+<md-switch ng-true-value="false" ng-false-value="true" ng-model="flowNode.useStaticMessage">Forward Message</md-switch>
 <md-text-float label="Filter by Topic" ng-model="flowNode.filterTopic"> </md-text-float>
 
 
