Added to mobiblu hack to auth-login.html

--- a/public/static/auth-login-success.html
+++ b/public/static/auth-login-success.html
@@ -5,8 +5,11 @@
 	<title>Octoblu Success</title>
 	<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="/assets/stylesheets/font-awesome.min.css">
+  <script src="/lib/jquery/dist/jquery.js"></script>
+  <script src="/static/auth-login.js"></script>
 </head>
 <body>
+  <span id="creds" style="display:none;" data-uuid="" data-token=""></span>
 
 	<div class="row">
     <div class="col-xs-12 col-lg-6 col-lg-offset-3 text-center">
