full height template box

--- a/public/pages/flow-browser-shareflow.html
+++ b/public/pages/flow-browser-shareflow.html
@@ -1,6 +1,6 @@
 <div class="full-height flow-browser-shareflows" ng-class="{ 'has-error' : shareFlowError, 'has-success' : shareFlowSuccess }">
 
-  <md-content layout="horizontal">
+  <md-content class="full-height" layout="horizontal">
     <section flex>
       <md-subheader class="md-primary">Templates</md-subheader>
 
