use nodetypes for the bill of materials page.

--- a/public/pages/flow-import.html
+++ b/public/pages/flow-import.html
@@ -11,9 +11,9 @@
           <md-item-content>
                 <div class="bill-of-materials-icon" ng-style="{ 'background-image': 'url(' + material.logo + ')' }"></div>
                 <div class="md-tile-content">
-                  <h3>{{material.type}}</h3>            
+                  <h3>{{material.name}}</h3>            
                   <h4>
-                    {{material.type}}
+                    {{material.description}}
                   </h4>
                 </div>
               </md-item-content>
