importing flows from template

--- a/public/pages/flow-import.html
+++ b/public/pages/flow-import.html
@@ -1,9 +1,14 @@
 <div layout="horizontal" layout-align="center" layout-padding>
   <md-whiteframe class="bill-of-materials md-whiteframe-z2">
     <md-toolbar>
-      <h2 class="md-toolbar-tools">
-        <span>Bill of Materials</span>
-      </h2>
+      <section layout="horizontal">
+        <h2 class="md-toolbar-tools">
+          <span>Bill of Materials</span>
+        </h2>
+        <section style="padding-right: 40px" layout="vertical" layout-align="center center">
+          <md-button ng-click="import()">Import</md-button>
+        </section>
+      </section>
     </md-toolbar>
     <md-content>
       <md-list>
