--- a/public/pages/node_forms/device_form.html
+++ b/public/pages/node_forms/device_form.html
@@ -2,7 +2,15 @@
 <md-switch ng-true-value="false" ng-false-value="true" ng-model="flowNode.useStaticMessage">Forward Message</md-switch>
 <md-text-float label="Filter by Topic" ng-model="flowNode.filterTopic"> </md-text-float>
 
-
 <div ng-show="flowNode.useStaticMessage" ng-hide="!flowNode.useStaticMessage">
   <device-message-form uuid="flowNode.uuid" token="flowNode.token" model="flowNode.staticMessage"></device-message-form>
 </div>
+
+<br>
+<h2>Available Devices</h2>
+
+<md-radio-group ng-model="flowNode.uuid">
+  <md-radio-button value="{{flowNodeType.uuid}}" ng-repeat="flowNodeType in otherMatchingFlowNodeTypes">
+    {{flowNodeType.name}}
+  </md-radio-button>
+</md-radio-group>
