fix interval form

--- a/public/pages/node_forms/interval_form.html
+++ b/public/pages/node_forms/interval_form.html
@@ -1,5 +1,5 @@
 <md-text-float label="Name" ng-model="flowNode.name"></md-text-float>
-<md-text-float label="Interval" ng-model="flowNode.interval" type="number"></md-text-float>
+<md-text-float label="Interval" ng-model="flowNode.repeat" type="number"></md-text-float>
 <p class="text-info">Interval is in milliseconds.</p>
 
 <md-text-float label="Topic" ng-model="flowNode.topic"> </md-text-float>
