--- a/public/pages/flow-import.html
+++ b/public/pages/flow-import.html
@@ -1,11 +1,11 @@
-<div layout="horizontal" layout-align="center" layout-padding>
+<div layout="row" layout-align="center" layout-padding>
   <md-whiteframe class="bill-of-materials md-whiteframe-z2">
     <md-toolbar>
-      <section layout="horizontal">
+      <section layout="row">
         <h2 class="md-toolbar-tools">
           <span>Bill of Materials</span>
         </h2>
-        <section style="padding-right: 40px" layout="vertical" layout-align="center center">
+        <section style="padding-right: 40px" layout="column" layout-align="center center">
           <md-button ng-click="import()">Import</md-button>
         </section>
       </section>
