--- a/public/pages/node_forms/compose_form.html
+++ b/public/pages/node_forms/compose_form.html
@@ -4,7 +4,7 @@
 <md-list>
   <md-item ng-repeat="key in flowNode.composeKeys track by $index">
     <md-item-content>
-      <div class="md-tile-content" layout="horizontal" layout-align="space-between">
+      <div class="md-tile-content" layout="row" layout-align="space-between">
         <md-text-float required label="Key {{$index + 1}}" ng-model="flowNode.composeKeys[$index]"> </md-text-float>        
         <md-button class="md-fab" ng-click="flowNode.composeKeys.splice($index, 1)">
             <i class="fa fa-minus"></i>
