--- a/public/pages/node_forms/greater_than_form.html
+++ b/public/pages/node_forms/greater_than_form.html
@@ -1,6 +1,6 @@
 <md-text-float label="Name" ng-model="flowNode.name"> </md-text-float>
 
-<div layout="horizontal">
+<div layout="row">
   <md-text-float flex-sm="33" label="Left" ng-model="flowNode.left"> </md-text-float>
   <h4 flex-sm="33" class="md-default-theme">
     <i class="fa fa-4x fa-angle-right"></i>
