--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -8,38 +8,38 @@
     </md-toolbar>
 
     <md-content>
-      <a href ui-sref=".home" layout="horizontal" layout-align="start center">
+      <a href ui-sref=".home" layout="row" layout-align="start center">
         <i class="fa fa-home fa-lg"></i>
         <span>Home</span>
       </a>
-      <a href ui-sref=".connector.nodes.all" layout="horizontal" layout-align="start center">
+      <a href ui-sref=".connector.nodes.all" layout="row" layout-align="start center">
         <i class="fa fa-plug fa-lg"></i>
         <span>Connect</span>
       </a>
-      <a href ui-sref="design" layout="horizontal" layout-align="start center">
+      <a href ui-sref="design" layout="row" layout-align="start center">
         <i class="fa fa-edit fa-lg"></i>
         <span>Design</span>
       </a>
-      <a href ui-sref=".process" layout="horizontal" layout-align="start center">
+      <a href ui-sref=".process" layout="row" layout-align="start center">
         <i class="fa fa-tasks fa-lg"></i>
         <span>Process</span>
       </a>
-      <a href ui-sref=".analyze" layout="horizontal" layout-align="start center">
+      <a href ui-sref=".analyze" layout="row" layout-align="start center">
         <i class="fa fa-bar-chart-o fa-lg"></i>
         <span>Analyze</span>
       </a>
-      <a href ui-sref=".admin.all" layout="horizontal" layout-align="start center">
+      <a href ui-sref=".admin.all" layout="row" layout-align="start center">
         <i class="fa fa-lock fa-lg"></i>
         <span>Admin</span>
       </a>
-      <a href ui-sref=".community" layout="horizontal" layout-align="start center">
+      <a href ui-sref=".community" layout="row" layout-align="start center">
         <i class="fa fa-group fa-lg"></i>
         <span>Community</span>
       </a>
     </md-content>
   </md-sidenav>
 
-  <div layout="vertical" layout-fill>
+  <div layout="column" layout-fill>
     <md-toolbar md-theme="indigo">
       <h2 class="md-toolbar-tools">
         <span>Toolbar: light-theme (default)</span>
