--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -1,10 +1,10 @@
 <div class="materialize" layout="row">
 
   <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$media('md')" md-is-open="navIsOpen">
-    <md-toolbar class="md-medium-tall md-default-theme">
-      <h1 class="md-toolbar-tools" style="padding-top:25px;">
-        <a href="" ng-click="goHome()" tabindex="0">Angular<br>Material Design</a>
-      </h1>
+    <md-toolbar class="md-medium-tall md-indigo-theme" layout-align="center">
+      <a href class="navbar-logo">
+        <img src="/assets/images/octoblu_logo.png">
+      </a>
     </md-toolbar>
 
     <md-content>
