--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -7,11 +7,11 @@
     </md-toolbar>
 
     <md-content>
-      <a href ui-sref=".home" layout="row" layout-align="start center">
+      <a href ui-sref="ob.home" layout="row" layout-align="start center">
         <i class="fa fa-home fa-lg"></i>
         <span>Home</span>
       </a>
-      <a href ui-sref=".connector.nodes.all" layout="row" layout-align="start center">
+      <a href ui-sref="ob.connector.nodes.all" layout="row" layout-align="start center">
         <i class="fa fa-plug fa-lg"></i>
         <span>Connect</span>
       </a>
@@ -19,19 +19,19 @@
         <i class="fa fa-edit fa-lg"></i>
         <span>Design</span>
       </a>
-      <a href ui-sref=".process" layout="row" layout-align="start center">
+      <a href ui-sref="ob.process" layout="row" layout-align="start center">
         <i class="fa fa-tasks fa-lg"></i>
         <span>Process</span>
       </a>
-      <a href ui-sref=".analyze" layout="row" layout-align="start center">
+      <a href ui-sref="ob.analyze" layout="row" layout-align="start center">
         <i class="fa fa-bar-chart-o fa-lg"></i>
         <span>Analyze</span>
       </a>
-      <a href ui-sref=".admin.all" layout="row" layout-align="start center">
+      <a href ui-sref="ob.admin.all" layout="row" layout-align="start center">
         <i class="fa fa-lock fa-lg"></i>
         <span>Admin</span>
       </a>
-      <a href ui-sref=".community" layout="row" layout-align="start center">
+      <a href ui-sref="ob.community" layout="row" layout-align="start center">
         <i class="fa fa-group fa-lg"></i>
         <span>Community</span>
       </a>
