--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -29,7 +29,7 @@
 
       <md-content flex layout="column">
         <div flex style="background-color: #ddd;">
-          <md-button class="md-fab md-primary" clip-copy="currentTemplate.url" style="position:absolute; top: calc(100%/2 - 28px); right: 28px"><i class="fa fa-share-alt fa-2x"></i></md-button>
+          <md-button class="md-fab md-primary" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" style="position:absolute; top: calc(100%/2 - 28px); right: 28px"><i class="fa fa-share-alt fa-2x"></i></md-button>
         </div>
         <div flex layout="column">
           <div flex layout-padding>
