--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -28,7 +28,7 @@
       </md-content>
 
       <div layout-fill flex layout="column">
-        <div flex class="flow-image-but-really-the-flow">
+        <div flex class="flow-image-but-really-the-flow" layout="column">
           <flow-editor flow="currentTemplate.flow" readonly="true"></flow-editor>
 
           <md-button class="md-fab md-primary" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" style="position:absolute; top: calc(100%/2); right: 28px">
