add sharing button to designer

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -27,6 +27,9 @@
           <button class="btn btn-default button-shadow" ng-click="deleteFlow(activeFlow)" tooltip="Delete Flow" tooltip-placement="bottom">
             <i class="fa fa-lg fa-trash-o"></i>
           </button>
+          <button class="btn btn-default button-shadow" ng-click="createTemplate(activeFlow)" tooltip="Create a Template" tooltip-placement="bottom">
+            <i class="fa fa-lg fa-share-alt"></i>
+          </button>
         </div>
 
         <div class="btn-group">
