--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -27,6 +27,10 @@
         <i class="fa fa-bar-chart-o fa-lg"></i>
         <span>Analyze</span>
       </a>
+      <a href ui-sref="material.templates" layout="row" layout-align="start center">
+        <i class="fa fa-file-text fa-lg"></i>
+        <span>Templates</span>
+      </a>
       <a href ui-sref="ob.admin.all" layout="row" layout-align="start center">
         <i class="fa fa-lock fa-lg"></i>
         <span>Admin</span>
