--- a/public/pages/octoblu.html
+++ b/public/pages/octoblu.html
@@ -39,6 +39,7 @@
                 <li ui-sref-active="active"><a href ui-sref="design"><i class="fa fa-edit fa-lg"></i>&nbsp;Design</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".process"><i class="fa fa-tasks fa-lg"></i>&nbsp;Process</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".analyze"><i class="fa fa-bar-chart-o fa-lg"></i>&nbsp;Analyze</a></li>
+                <li ui-sref-active="active"><a href ui-sref="material.templates"><i class="fa fa-file-text fa-lg"></i>&nbsp;Templates</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".admin.all"><i class="fa fa-lock fa-lg"></i>&nbsp;Admin</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".community"><i class="fa fa-group fa-lg"></i>&nbsp;Community</a></li>
             </ul>
