--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -4,7 +4,7 @@
       <i class="fa fa-bars"></i>
     </a>
 
-    <span>Manage Yer Templates Dawg</span>
+    <span>Manage Templates</span>
   </h2>
 </md-toolbar>
 
