Add different shades of indigo

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
     <link href="/lib/prism/themes/prism-coy.css" rel="stylesheet"/>
     <link rel="stylesheet" href="/lib/angular-material/angular-material.css">
     <link rel="stylesheet" href="/lib/angular-material/themes/indigo-theme.css">
+    <link rel="stylesheet" href="/lib/angular-material/themes/light-blue-dark-theme.css">
+    <link rel="stylesheet" href="/lib/angular-material/themes/blue-grey-theme.css">
 
     <style type="text/css">
         .reveal-animation.ng-enter {
